--- a/dataanalysis.ipynb
+++ b/dataanalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,6 @@
     "    fatal_df[\"Crew fatalities\"] + fatal_df[\"Pax fatalities\"] + fatal_df[\"Other fatalities\"]\n",
     ")\n",
     "\n",
-    "# Recalculate after this\n",
     "fatal_df[\"Fatality_Rate\"] = fatal_df[\"Total_fatalities\"] / fatal_df[\"Total_onboard\"]\n",
     "fatal_df.head()\n",
     "fatal_df[\"Date_Cleaned\"] = fatal_df[\"Date & Time\"].str.replace(\"LT\", \"\").str.strip()\n",
@@ -367,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +419,7 @@
     "# View columns with missing data\n",
     "fatal_df.isnull().sum()\n",
     "\n",
-    "# Drop rows where Date or Total_onboard is missing (critical fields)\n",
+    "# Drop rows where Date or Total_onboard is missing \n",
     "fatal_df.dropna(subset=[\"Date\", \"Total_onboard\"], inplace=True)\n",
     "\n",
     "# Optionally fill others\n",
@@ -479,11 +478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a preview column with first 300 characters\n",
+    "\n",
     "fatal_df[\"Circumstances_Short\"] = fatal_df[\"Circumstances\"].str.slice(0, 300) + \"...\"\n",
     "fatal_df.to_csv(\"data/final_fatal_crashes.csv\", index=False)"
    ]
