--- a/dataanalysis.ipynb
+++ b/dataanalysis.ipynb
@@ -1277,6 +1277,89 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load data\n",
+    "fatal = pd.read_csv(\"fatal_crashes.csv\")\n",
+    "nonfatal = pd.read_csv(\"finalnon_fatal_crashes.csv\")\n",
+    "\n",
+    "# Add crash type\n",
+    "fatal['Crash_Type'] = 'Fatal'\n",
+    "nonfatal['Crash_Type'] = 'Non-Fatal'\n",
+    "nonfatal.rename(columns={'date': 'Date'}, inplace=True)\n",
+    "\n",
+    "\n",
+    "# Convert Date to datetime and extract Year\n",
+    "fatal['Date'] = pd.to_datetime(fatal['Date'], errors='coerce')\n",
+    "nonfatal['Date'] = pd.to_datetime(nonfatal['Date'], errors='coerce')\n",
+    "\n",
+    "fatal['Year'] = fatal['Date'].dt.year\n",
+    "nonfatal['Year'] = nonfatal['Date'].dt.year\n",
+    "\n",
+    "# Keep only required columns\n",
+    "fatal = fatal[['Year', 'Crash_Type']]\n",
+    "nonfatal = nonfatal[['Year', 'Crash_Type']]\n",
+    "\n",
+    "# Combine and summarize\n",
+    "combined = pd.concat([fatal, nonfatal])\n",
+    "summary = combined.groupby(['Year', 'Crash_Type']).size().reset_index(name='Crash_Count')\n",
+    "\n",
+    "# Save to CSV for Tableau\n",
+    "summary.to_csv(\"merged_crashes.csv\", index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "fatal = pd.read_csv(\"fatal_crashes.csv\")\n",
+    "nonfatal = pd.read_csv(\"finalnon_fatal_crashes.csv\")\n",
+    "\n",
+    "fatal['Crash_Type'] = 'Fatal'\n",
+    "nonfatal['Crash_Type'] = 'Non-Fatal'\n",
+    "\n",
+    "# Make sure both datasets have Location and Year\n",
+    "fatal = fatal[['Year', 'Location', 'Crash_Type']]\n",
+    "nonfatal = nonfatal[['year', 'location']].rename(columns={'year': 'Year', 'location': 'Location'})\n",
+    "nonfatal['Crash_Type'] = 'Non-Fatal'\n",
+    "\n",
+    "# Combine\n",
+    "combined = pd.concat([fatal, nonfatal])\n",
+    "\n",
+    "# Save for Tableau\n",
+    "combined.to_csv(\"mergedlocation_crashes.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fatal = pd.read_csv(\"fatal_crashes.csv\")\n",
+    "nonfatal = pd.read_csv(\"finalnon_fatal_crashes.csv\")\n",
+    "\n",
+    "fatal['Crash Type'] = 'Fatal'\n",
+    "nonfatal['Crash Type'] = 'Non-Fatal'\n",
+    "nonfatal['Total fatalities'] = 0  \n",
+    "\n",
+    "combined = pd.concat([fatal[['Flight Phase', 'Crash Type', 'Total fatalities']],\n",
+    "                      nonfatal[['flight_phase', 'Crash Type', 'Total fatalities']]])\n",
+    "\n",
+    "combined.to_csv(\"merged_flight_phase.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
